# ringity

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  DELETEME.ipynb  LICENSE  MANIFEST.in  README.html  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml
doc/executables/: get_arctic_data.sh
doc/figures/: Fig1+Fig2F-biological_networks.ipynb  Fig3-network_model_parameters.ipynb  SFigX-exploring_different_metric_structures.ipynb  biological_networks-extended.ipynb
doc/network_fitting/: comparisons.py  deal_with_genes.ipynb  draw_layout.py  draw_violinplots.py  final_notebook.ipynb  fitting_model.py  full_analysis.sh  generate_ring_network.py  json_dataframe_util.py  light_test_analysis.sh  main.py  requirements.txt  retrieve_positions.py  run.sh  test_network_model.py  view_comparisons.ipynb  view_comparisons.py
doc/network_model/: 1_The_d-s-p_paradigm.ipynb  2_Special_cases.ipynb  distribution_functions.ipynb
doc/notebooks/: new_synthetic_networks.ipynb
doc/paper_figures/: Fig1+Fig2F-biological_networks-extended.ipynb  Fig1+Fig2F-biological_networks.ipynb  Fig3-network_model_parameters.ipynb  _legacy-exploring_network_model_regimes_inferring_response.ipynb
doc/scripts/: melanoma_demo.py
doc/single_cell/: melanoma_demo.py
doc/tutorials/: basic_demo.ipynb
notebooks/: Analytic_calculation_verification.ipynb  data_generator.ipynb  degree_distribution.ipynb  degree_dstribution2.ipynb  figure_3.ipynb  giotto_tda.ipynb  network_model_distribution_testing.ipynb  network_model_guide.ipynb  network_model_parameter_exploration.ipynb  new_model.ipynb  parameter_exploration.ipynb  real_networks.ipynb  ringity_user_guide.ipynb  scRNAseq_example.ipynb  synthetic_networks.ipynb  theFinalModel.ipynb  tmp.ipynb  walking_guide_network_model.ipynb  walking_guide_network_model_tmp.ipynb
notebooks/.ipynb_checkpoints/: Analytic_calculation_verification-checkpoint.ipynb  Similarity_analysis-checkpoint.ipynb  data_generator-checkpoint.ipynb  figure_3-checkpoint.ipynb  network_model_distribution_testing-checkpoint.ipynb  network_model_guide-checkpoint.ipynb  network_model_parameter_exploration-checkpoint.ipynb  new_model-checkpoint.ipynb  new_synthetic_networks-checkpoint.ipynb  notebook-checkpoint.ipynb  real_networks-checkpoint.ipynb  ringity_user_guide-checkpoint.ipynb  scRNAseq_example-checkpoint.ipynb  synthetic_networks-checkpoint.ipynb  theFinalModel-checkpoint.ipynb  walking_guide_network_model-checkpoint.ipynb
notebooks/data/: percolation
notebooks/executables/: extract_frames.sh  get_gene_data.sh  get_lipid_data.sh  get_soil_data.sh  unzip_gene_data.sh
notebooks/giotto_tda/: first_commit.ipynb
notebooks/kuramoto/: .gitignore  README.md  core.py  create_parameter_array.sh  detailed_run_visualisation.py  dotplot.py  fig_script_parameter_array.py  fig_script_per_run.py  kuramoto_over_folder.sh  light_analysis.sh  load_all_networks_run_all_kuramoto.sh  load_network_run_kuramoto.py  load_network_run_kuramoto.sbatch  load_saved_info.py  main.py  make_figures.sh  make_network.py  make_networks.py  parameter_array_dotplot.py  requirements.txt  ring_score_coherence_scatterplot.py  run_kuramoto.py  run_local.sh  search_for_diverse_dynamics.sh  select_and_plot_coherence.py  select_and_rerun_interesting.py  sort_to_dataframe.py
notebooks/network_fitting/: run.sh
notebooks/network_model/: distribution_functions.ipynb  network_model_guide.ipynb  network_model_parameter_exploration.ipynb  network_model_walking_guide.ipynb  network_model_walking_guide_NOEXPERIMENTS.ipynb  walking_guide.ipynb
notebooks/ringity/: classes.py  core.py  exceptions.py  methods.py
ringity/: __init__.py  centralities.py  classes.py  core.py  data.py  distribution_functions.py  exceptions.py  graphlet_coefficients.py  gtda.py  network_model.py  plots.py  ring_scores.py  ringity_model.py  routines.py  test_venv_compability.py
ringity.egg-info/: PKG-INFO  SOURCES.txt
ringity/_data/: HALLMARK_E2F_TARGETS.csv  TIROSH_ALL_MARKERS.csv  TIROSH_G1S_MARKERS.csv  TIROSH_G2M_MARKERS.csv  hallmark_g2m.csv  tirosh_g1s.csv
ringity/_legacy/: conversions.py  legacy_centralities.py  pipeline.py
ringity/_tests/: RUNME.py  _legacy_test_conversions.py  script_test_code_snippets.py  test_centralities.py  test_classes.py  test_conversions.py  test_diagram_function.py  test_distribution_functions.py  test_main_score.py  test_methods.py  test_network_model.py  test_pdiagram_functions.py  test_ring_score_flavours.py  test_ring_score_from_sequence.py  test_ring_score_functions.py  tmp_code_snippets.py
ringity/classes/: _distns.py  diagram.py  exceptions.py  modelparameterbuilder.py  network_model.py  networkbuilder.py  new_diagram.py  pdiagram.py
ringity/core/: __init__.py  core.py  data2metric  data2metric.py  genesets.py  gtda.py  metric2ringscore.py  phomology.py  pipeline.py  plots.py  ring_score_flavours.py  ring_scores.py  ringscore_functions.py  single_cell.py  singlecell.py  statistics.py  utils.py
ringity/cython/: ccentralities.c  ccentralities.pyx  centralities.py  new_centralities.py  setup.py  (+1 more)
tests/: RUNME.py  _test_analytical_expressions.py  test_centralities.py  test_classes.py  test_distribution_functions.py  test_main_score.py  test_methods.py  test_network_model.py  test_pdiagram_functions.py  test_pwdistance_from_network.py  test_ring_score_from_sequence.py  test_ring_score_functions.py
(+235 files in other folders)
