[metadata]
name = ringity
version = attr: ringity.__version__
author = Markus K. Youssef
author_email = mk.youssef@hotmail.com
description = ringity package
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ClusterDuck123/ringity
project_urls =
    Bug Tracker = https://github.com/kiri93/ringity/issues
    Lab Origin = https://menchelab.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
keywords = network ring circular tda

[options]
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    networkx
    numba
    giotto-tda
    scanpy
    ripser
